--- a/public/plugins/ckeditor/samples/old/index.html
+++ b/public/plugins/ckeditor/samples/old/index.html
@@ -46,6 +46,9 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
 
 			<h2 class="samples">Plugins</h2>
 <dl class="samples">
+<dt><a class="samples" href="tableresize/tableresize.html">TableResize plugin</a></dt>
+<dd>Using the TableResize plugin to enable table column resizing.</dd>
+
 <dt><a class="samples" href="wysiwygarea/fullpage.html">Full page support</a></dt>
 <dd>CKEditor inserted with a JavaScript call and used to edit the whole page from &lt;html&gt; to &lt;/html&gt;.</dd>
 </dl>
